# Relay

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
crates/relay-amqp/: Cargo.toml
crates/relay-amqp/src/: lib.rs
crates/relay-amqp/tests/: rabbitmq_flow.rs  subscriber_routes.rs
crates/relay-config/: Cargo.toml
crates/relay-errors/: Cargo.toml
crates/relay-proto/: Cargo.toml  build.rs
crates/relay-proto/src/: lib.rs
crates/relay-telemetry/: Cargo.toml
crates/relay-types/: Cargo.toml
crates/relay-types/src/: lib.rs
deployment/envoy-gateway/: backend-traffic-policy-placeholder.yaml  gateway.yaml  grpcroute-identity.yaml  namespace.yaml  security-policy-placeholder.yaml  smoke-test-grpc-backend.yaml
deployment/k8s/: README.md
deployment/k8s/base/: apps.yaml  config.yaml  infrastructure.yaml  kustomization.yaml  migrations.yaml  outbox-workers.yaml  postgres.yaml
deployment/k8s/local-kind-envoy/: gateway.yaml  grpc-routes.yaml  http-routes.yaml  kustomization.yaml  security-policies.yaml
deployment/local/: compose.yaml
docs/: architecture.md  roadmap.md
docs/code/: relay-amqp.md
docs/deployment/: envoy-gateway-local.md
e2e/: chat-envoy.sh
proto/: bootstrap.proto  chat.proto  friendship.proto  identity.proto  realtime.proto  workspace.proto
scripts/: kind-create-apply.sh  kind-delete.sh  kind-resume.sh  kind-suspend.sh
services/bootstrap/: Cargo.toml  Dockerfile
services/bootstrap/migration/: Cargo.toml
services/bootstrap/migration/src/: lib.rs  m20260424_000001_create_bootstrap_schema.rs
services/bootstrap/src/: compositor.rs  config.rs  db.rs  events.rs  lib.rs  main.rs
services/bootstrap/src/amqp/: chat.rs  friendship.rs  handler.rs  identity.rs  mod.rs  workspace.rs
services/bootstrap/src/entity/: compose_queue.rs  conversation_message_state.rs  conversation_read_state.rs  conversation_snapshot.rs  dm_pair_snapshot.rs  dm_projection.rs  dm_unread_projection.rs  friend_request_snapshot.rs  mod.rs  prelude.rs  processed_event.rs  user_app_projection.rs  user_snapshot.rs  workspace_channel_projection.rs  workspace_channel_snapshot.rs  workspace_channel_unread_projection.rs  workspace_member_snapshot.rs  workspace_projection.rs  workspace_snapshot.rs  workspace_unread_projection.rs
services/bootstrap/src/grpc/: get_app_bootstrap.rs  get_dm_bootstrap.rs  get_workspace_bootstrap.rs  handler.rs  mod.rs
services/bootstrap/tests/: amqp_projection.rs  compositor.rs  get_app_bootstrap.rs  get_dm_bootstrap.rs  get_workspace_bootstrap.rs
services/chat/: Cargo.toml  Dockerfile
services/email/: Cargo.toml  Dockerfile
services/email/migration/: Cargo.toml
services/email/migration/src/: lib.rs  m20260410_000001_create_email_schema.rs
services/email/src/: amqp.rs  config.rs  db.rs  events.rs  lib.rs  main.rs  smtp.rs
services/email/src/amqp/: handler.rs  mod.rs
services/email/src/entity/: email_delivery_attempt.rs  mod.rs  outbound_email.rs  prelude.rs
services/email/tests/: handler_dedupe.rs  send_verification_email.rs
services/friendship/: Cargo.toml  Dockerfile
services/identity/: Cargo.toml  Dockerfile
services/identity/migration/src/: lib.rs  m20260408_000001_create_identity_schema.rs
services/identity/src/: auth.rs  config.rs  lib.rs  main.rs
services/identity/src/db/: connection.rs
services/identity/src/entity/: email_verification_token.rs  mod.rs  prelude.rs  user_account.rs  user_credential_password.rs  user_profile.rs  user_session.rs
services/identity/src/grpc/: authenticate_password.rs  check.rs  event.rs  get_user_profile.rs  get_users_by_ids.rs  handler.rs  identity.rs  mod.rs  redeem_email_verification_token.rs  refresh_session.rs  register_user.rs  resend_verification_email.rs  revoke_session.rs  tests.rs  update_user_profile.rs
services/identity/tests/: authenticate_password.rs  check.rs  envoy_ext_authz.rs  get_users_by_ids.rs  redeem_email_verification_token.rs  refresh_session.rs  register_user.rs  resend_verification_email.rs  revoke_session.rs  update_user_profile.rs
services/identity/tests/common/: mod.rs
services/realtime/: Cargo.toml  Dockerfile
services/realtime/src/: config.rs  lib.rs  main.rs  redis.rs  store.rs  websocket.rs
services/realtime/src/grpc/: deliver_message.rs  disconnect_actor_sessions.rs  get_user_presence.rs  handler.rs  mod.rs
services/realtime/tests/: redis.rs  websocket.rs
services/workspace/: Cargo.toml  Dockerfile
services/workspace/migration/: Cargo.toml
services/workspace/migration/src/: lib.rs  m20260419_000001_create_workspace_schema.rs
services/workspace/src/: events.rs  main.rs
services/workspace/src/amqp/: handler.rs  mod.rs
services/workspace/src/entity/: mod.rs  prelude.rs  user_account.rs  user_snapshot.rs  workspace.rs  workspace_channel.rs  workspace_invitation.rs  workspace_invite_link.rs  workspace_member.rs  workspace_member_role.rs  workspace_role.rs
services/workspace/src/grpc/: accept_invitation.rs  add_member.rs  authorize_channel_action.rs  create_channel.rs  create_invite_link.rs  create_workspace.rs  delete_workspace.rs  get_workspace.rs  handler.rs  issue_invitation.rs  join_workspace_by_invite_link.rs  lib.rs  list_channels.rs  list_workspace_for_user.rs  list_workspace_members.rs  mod.rs  remove_member.rs  revoke_invite_link.rs  update_workspace.rs
services/workspace/tests/: accept_invitation.rs  add_member.rs  amqp_user_account.rs  authorize_channel_action.rs  create_channel.rs  create_invite_link.rs  create_workspace.rs  delete_workspace.rs  get_workspace.rs  issue_invitation.rs  join_workspace_by_invite_link.rs  list_channels.rs  list_workspace_for_user.rs  remove_member.rs  revoke_invite_link.rs  update_workspace.rs
web/: .env.example  AGENTS.md  README.md  package.json
web-demo/: .prettierignore  package.json  svelte.config.js  vite.config.ts
web/src/: hooks.server.ts
workers/outbox/: Cargo.toml  Dockerfile
workers/outbox/src/: config.rs  lib.rs  main.rs  worker.rs
workers/outbox/src/entity/: mod.rs  outbox_event.rs
workers/outbox/tests/: publish_flow.rs
(+230 files in other folders)
