[workspace]
resolver = "3"
members = [
  "crates/relay-config",
  "crates/relay-errors",
  "crates/relay-proto",
  "crates/relay-telemetry",
  "crates/relay-types",
  "services/bootstrap",
  "services/chat",
  "services/email",
  "services/friendship",
  "services/gateway",
  "services/identity",
  "services/realtime",
  "services/workspace",
  "workers/outbox",
]

[workspace.dependencies]
tokio = { version = "1.51.0", features = ["macros", "rt-multi-thread"] }
actix-web = "4.13.0"
sea-orm = { version = "2.0.0-rc", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }
tonic = "0.14.5"
tonic-prost = "0.14.5"
tonic-prost-build = "0.14.5"
prost = "0.14.3"
prost-types = "0.14.1"
uuid = { version = "1.23.0", features = ["v4"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
lapin = "4.4.0"
chrono = "0.4.44"
thiserror = "2.0.18"
