[workspace]
resolver = "3"
members = [
  "crates/relay-config",
  "crates/relay-errors",
  "crates/relay-proto",
  "crates/relay-telemetry",
  "crates/relay-types",
  "services/bootstrap",
  "services/chat",
  "services/email",
  "services/friendship",
  "services/identity",
  "services/identity/migration",
  "services/realtime",
  "services/workspace",
  "workers/outbox",
]

[workspace.dependencies]
tokio = { version = "1.51.0", features = ["macros", "rt-multi-thread"] }
sea-orm = { version = "2.0.0-rc", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
  "with-chrono",
  "with-uuid",
  "debug-print",
  "mock",
] }
sea-orm-migration = { version = "2.0.0-rc", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
] }
tonic = "0.14.5"
tonic-prost = "0.14.5"
tonic-prost-build = "0.14.5"
prost = "0.14.3"
prost-types = "0.14.1"
uuid = { version = "1.23.0", features = ["v4"] }
lapin = "4.4.0"
chrono = "0.4.44"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

relay-proto = { path = "./crates/relay-proto" }
relay-errors = { path = "./crates/relay-errors" }
relay-config = { path = "./crates/relay-config" }
relay-telemetry = { path = "./crates/relay-telemetry" }
relay-types = { path = "./crates/relay-types" }
