[workspace]
resolver = "3"
members = [
  "crates/relay-amqp",
  "crates/relay-proto",
  "crates/relay-types",
  "services/bootstrap",
  "services/bootstrap/migration",
  "services/chat",
  "services/chat/migration",
  "services/email",
  "services/email/migration",
  "services/friendship",
  "services/friendship/migration",
  "services/identity",
  "services/identity/migration",
  "services/realtime",
  "services/workspace",
  "services/workspace/migration",
  "workers/outbox",
]

[workspace.dependencies]
tokio = { version = "1.52.0", features = ["full"] }
sea-orm = { version = "2.0.0-rc.38", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
  "with-chrono",
  "with-uuid",
  "debug-print",
  "mock",
] }
sea-orm-migration = { version = "2.0.0-rc.38", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
] }
tonic = "0.14.5"
tonic-prost = "0.14.5"
tonic-prost-build = "0.14.5"
async-trait = "0.1.89"
prost = "0.14.3"
prost-types = "0.14.3"
uuid = { version = "1.23.0", features = ["v4"] }
lapin = "4.4.0"
chrono = "0.4.44"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
dotenvy = "0.15.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"


relay-proto = { path = "./crates/relay-proto" }
relay-amqp = { path = "./crates/relay-amqp" }
relay-types = { path = "./crates/relay-types" }
