[package]
name = "bootstrap"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = { workspace = true }
tonic-health = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tonic-prost = { workspace = true }
sea-orm = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
uuid = { workspace = true }
chrono = { workspace = true }
relay-proto = { workspace = true }
relay-amqp = { workspace = true }
relay-types = { workspace = true }
tracing = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
migration = { path = "migration", package = "bootstrap-migration" }
lapin = { workspace = true }
testcontainers-modules = { version = "0.15", features = ["postgres", "rabbitmq"] }
tracing-subscriber = { workspace = true }
