[package]
name = "email"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm = { workspace = true }
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
lapin = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
relay-amqp = { workspace = true }
lettre = { version = "0.11.21", default-features = false, features = [
  "smtp-transport",
  "builder",
  "tokio1",
  "rustls",
  "tokio1-rustls",
  "ring",
  "rustls-native-certs",
] }

[dev-dependencies]
migration = { path = "migration", package = "email-migration" }
futures-util = "0.3"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
testcontainers-modules = { version = "0.15", features = [
  "postgres",
  "rabbitmq",
] }
