[package]
name = "identity"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
argon2 = "0.5.3"
jwt-simple = "0.12.12"
serde = { version = "1", features = ["derive"] }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tonic-prost = { workspace = true }
sea-orm = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
relay-proto = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde_json = "1"
sha2 = "0.10"
subtle = "2.6"

[build-dependencies]
tonic-prost-build = "0.14.5"
