[package]
name = "identity"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = { workspace = true }
tonic-health = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tonic-prost = { workspace = true }
envoy-types = "0.7.3"
sea-orm = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
relay-proto = { workspace = true }
relay-types = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.11.0"
subtle = "2.6"
argon2 = "0.5.3"
jwt-simple = "0.12.12"

[dev-dependencies]
migration = { path = "migration", package = "identity-migration" }
testcontainers = { version = "0.27.2", features = ["host-port-exposure"] }
testcontainers-modules = { version = "0.15", features = ["postgres"] }
