[package]
name = "realtime"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tonic-prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
dotenvy = { workspace = true }
relay-proto = { workspace = true }
axum = { version = "0.8.9", features = ["ws"] }
axum-extra = { version = "0.12.6", features = ["typed-header"] }
futures-util = { version = "0.3.32", features = [
  "sink",
  "std",
], default-features = false }
dashmap = "6.1.0"
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
headers = "0.4.1"
redis = { version = "1.2", features = [
  "tokio-comp",
  "tokio-rustls-comp",
  "ahash",
  "uuid",
  "connection-manager",
] }

[dev-dependencies]
testcontainers = "0.27.2"
tokio-tungstenite = "0.29.0"
