[package]
name = "workspace"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tonic-prost = { workspace = true }
sea-orm = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
uuid = { workspace = true }
chrono = { workspace = true }
relay-proto = { workspace = true }
relay-types = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
lapin = { workspace = true }

[dev-dependencies]
migration = { path = "migration", package = "workspace-migration" }
testcontainers-modules = { version = "0.15", features = ["postgres"] }
tracing-subscriber = { workspace = true }
