[package]
name = "outbox"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm = { workspace = true }
tokio = { workspace = true, features = ["full"] }
lapin = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
serde_json = "1.0"
uuid = { workspace = true }

[dev-dependencies]
testcontainers-modules = { version = "0.15", features = [
  "postgres",
  "rabbitmq",
] }
